fix creator alignment on Linux

--- a/chrome/skin/default/zotero/bindings/itembox.css
+++ b/chrome/skin/default/zotero/bindings/itembox.css
@@ -5,7 +5,6 @@ scrollbox
 
 row, tagsbox row
 {
-	margin: -1px 0 0 0;
 	min-height: 1em;
 }
 
@@ -77,8 +76,8 @@ row label
 
 .creator-type-label > label
 {
-	margin: 0 !important;
-	padding: 0 !important;
+	margin-right: 0 !important;
+	padding-right: 0 !important;
 }
  
 .creator-type-label > image {
@@ -96,8 +95,8 @@ row label,
 row > vbox[fieldname=abstractNote],
 row > vbox[fieldname=extra]
 {
-	margin-top: 0;
-	margin-bottom: 0;
+	margin-top: 1px !important;
+	margin-bottom: 1px !important;
 	-moz-box-pack: start;
 	-moz-margin-start: 1px !important;
 	-moz-margin-end: 5px !important;
@@ -106,7 +105,7 @@ row > vbox[fieldname=extra]
 
 row > vbox > description
 {
-	margin: 1px 0 0 0 !important;
+	margin: 0 !important;
 }
 
 hbox.zotero-date-field-status
